# back-lead-clean

./: .dockerignore  .gitignore  main.py  pyproject.toml  render.yaml  requirements.txt
api/: api.py  apiLeads.py  apiSociete.py  apiToken.py  apiValidationRules.py
database/: db.py
model/: blacklistLeads.py  cleaning_leads.py  export_leads.py  gold_leads.py  leads.py  prod_leads.py  silver_leads.py  societe_leads.py  staging_import_history.py  staging_leads.py  statistiqueLeads.py  steaging_applique.py  token.py  validationRule.py
schema/: SchemaValidationRule.py  schemaSociete.py  schemaStatic.py  schemaToken.py
service/: service.py  serviceLeads.py  serviceSociete.py  serviceToken.py  serviceValidationRule.py
util/: auth.py  util.py
