[project]
name = "backend-lead-clean"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "sqlalchemy==2.0.48",
    "psycopg2-binary==2.9.11",
    "pandas==3.0.1",
    "openpyxl==3.1.5",
    "python-dateutil==2.9.0.post0",
    "anyio==4.12.1",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
]